tests/linear/should_fail/LinearSeq.stderr

LinearSeq.hs:6:5: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘x’
    • In an equation for ‘bad’: bad x = seq x ()
